[package]
name = "morpion"
version = "0.1.0"
edition = "2021"
authors = ["Basty"]
include = ["**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-pc-windows-msvc", "wasm32-unknown-unknown", "x86_64-unknown-linux-gnu"]

[dependencies]
eframe = "0.28.1"
egui = "0.28.1"
egui_extras = { version = "0.28.1", features = ["image"] }
image = { version = "0.25.2", default-features = false, features = ["png"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
